src/test/resources/examples/invalid/FXDefineRoot.fxml
<fx:define xmlns:fx="http://javafx.com/fxml"/>